[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cyber-sec-triage-openenv"
version = "1.0.0"
description = "Cyber Security SOC Triage environment for OpenEnv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "openai==1.14.2",
    "requests==2.31.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:run"

[tool.setuptools]
packages = ["server"]
